# wakfu-optimizer

./: .gitignore  CLAUDE.md  pyproject.toml
.claude/: settings.json
.claude/agents/: architect.md  code-reviewer.md  implementer.md  security-reviewer.md
.claude/hooks/: check-debug-isolation.sh  session-start-context.sh  statusline.sh  stop-suggest-checkpoint.sh
.claude/rules/: code-change.md  code-style.md  commit-style.md  delegation.md  doc-enforcement.md  docs-style.md  file-naming.md  learning-style.md  logging-policy.md  memory-policy.md  plan-format.md  project-guidelines.md  verification.md
.claude/skills/bitacora/: SKILL.md
.claude/skills/bug-fix/: SKILL.md
.claude/skills/checkpoint/: SKILL.md
.claude/skills/doc-enforce/: SKILL.md
.claude/skills/document/: SKILL.md
.claude/skills/investigate/: SKILL.md
.claude/skills/phase-executor/: SKILL.md
.claude/skills/plan-writing/: SKILL.md
.claude/skills/study/: SKILL.md
.claude/skills/test/: SKILL.md
docs/: 01-PRD.md  02-TRD.md  03-Plan-Implementacion.md
perfiles/: desenlace_legendario.toml  ejemplo_distancia.toml
src/wakfu_opt/: __init__.py  __main__.py  cli.py  config.py  exportar_pdf.py  normalizador.py  perfil.py  pool.py  reporte.py
src/wakfu_opt.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
tests/: conftest.py  test_catalogo_piedras.py  test_evaluador.py  test_integracion.py  test_mapeo_acciones.py  test_mapeo_slots.py  test_normalizador.py  test_perfil.py  test_pool.py  test_reporte.py  test_solver.py  test_sublimaciones.py
todo/: PLAN.md
(+18 files in other folders)
